--- a/views/partials/barraLateral.ejs
+++ b/views/partials/barraLateral.ejs
@@ -22,7 +22,7 @@
             <a href="/fornecedores">FORNECEDORES <i class="ri-truck-line"></i></a>
             <a href="/produtos">PRODUTOS <i class="ri-shopping-bag-3-fill"></i></a>
             <a href="/entrada">ENTRADA <i class="ri-shopping-cart-line"></i></a>
-            <a href="#">SAIDA <i class="ri-coins-line"></i></a>
+            <a href="/saida">SAIDA <i class="ri-coins-line"></i></a>
             <a href="#">CONFIGURAÇÃO <i class="ri-tools-fill"></i></a>
             <a onclick="sair()" href="#">SAIR <i class="ri-door-open-line"></i></a>
             <br>
